--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,10 @@ bincode = "1.3.3"
 blake3 = { version = "1.8.2", default-features = false }
 borsh = { version = "1.5.5", default-features = false }
 bs58 = { version = "0.5.0", default-features = false }
-chrono = { version = "0.4.26", features = ["alloc"], default-features = false }
+chrono = { version = "0.4.42", features = [
+    "alloc",
+    "clock",
+], default-features = false }
 clap = { version = "4.5.48", default-features = false }
 clap_complete = { version = "4.5.48", default-features = false }
 convert_case = "0.8.0"
@@ -57,7 +60,9 @@ fern = { version = "0.7.1", default-features = false }
 fork = "0.2.0"
 futures = { version = "0.3.22", default-features = false }
 hex = { version = "0.4.3", default-features = false }
-hiro-system-kit = { version = "0.3.4", default-features = false }
+hiro-system-kit = { version = "0.3.4", default-features = false, features = [
+    "tokio_helpers",
+] }
 include_dir = "0.7.4"
 indicatif = { version = "0.18.0", default-features = false }
 ipc-channel = "0.19.0"
@@ -123,7 +128,9 @@ solana-rpc-client = { version = "2.3.8", default-features = false }
 solana-rpc-client-api = { version = "2.3.8", default-features = false }
 solana-runtime = { version = "2.3.8", default-features = false }
 solana-sdk-ids = { version = "2.2.1", default-features = false }
-solana-signature = { version = "2.3.0", default-features = false, features = ["rand"] }
+solana-signature = { version = "2.3.0", default-features = false, features = [
+    "rand",
+] }
 solana-signer = { version = "2.2.1", default-features = false }
 solana-slot-hashes = { version = "2.2.1", default-features = false }
 solana-system-interface = { version = "1.0.0", default-features = false }
