--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,7 @@ juniper_graphql_ws = { version = "0.4.0", default-features = false }
 lazy_static = "1.5.0"
 libloading = "0.7.4"
 litesvm = { version = "0.8.1", features = ["nodejs-internal"] }
+litesvm-token = "0.8.1"
 log = "0.4.27"
 mime_guess = { version = "2.0.4", default-features = false }
 mustache = "0.9.0"
