--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -78,9 +78,9 @@ solana-transaction = { workspace = true }
 solana-transaction-error = { workspace = true }
 solana-transaction-status = { workspace = true }
 solana-version = { workspace = true }
-spl-associated-token-account = { workspace = true }
-spl-token = { workspace = true }
-spl-token-2022 = { workspace = true }
+spl-associated-token-account-interface = { workspace = true }
+spl-token-interface = { workspace = true }
+spl-token-2022-interface = { workspace = true }
 tokio = { workspace = true }
 uuid = { workspace = true }
 
