--- a/crates/mcp/Cargo.toml
+++ b/crates/mcp/Cargo.toml
@@ -23,8 +23,8 @@ serde_json = { workspace = true }
 solana-keypair = { workspace = true }
 solana-pubkey = { workspace = true }
 solana-signer = { workspace = true }
-spl-associated-token-account = { workspace = true }
-spl-token = { workspace = true }
+spl-associated-token-account-interface = { workspace = true }
+spl-token-interface = { workspace = true }
 tracing = { workspace = true }
 
 surfpool-core = { workspace = true }
