--- a/Cargo.toml
+++ b/Cargo.toml
@@ -147,9 +147,9 @@ surfpool-studio-ui = { path = "crates/studio", default-features = false }
 surfpool-subgraph = { path = "crates/subgraph", default-features = false }
 surfpool-types = { path = "crates/types", default-features = false }
 
-txtx-addon-kit = { path = "../txtx/crates/txtx-addon-kit" }
-txtx-addon-network-svm = { path = "../txtx/addons/svm/core" }
-txtx-addon-network-svm-types = { path = "../txtx/addons/svm/types" }
+txtx-addon-kit = { git = "https://github.com/txtx/txtx.git", rev = "6164e2e5ac795d66bb8facf40c37727bc8a7de36" }
+txtx-addon-network-svm = { git = "https://github.com/txtx/txtx.git", rev = "6164e2e5ac795d66bb8facf40c37727bc8a7de36" }
+txtx-addon-network-svm-types = { git = "https://github.com/txtx/txtx.git", rev = "6164e2e5ac795d66bb8facf40c37727bc8a7de36" }
 txtx-cloud = { version = "0.1.13", features = ["clap", "toml"], default-features = false }
 txtx-core = { version = "0.4.13" }
 txtx-gql = { version = "0.3.7" }
