--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,9 @@ resolver = "2"
 [workspace.dependencies]
 actix-cors = "0.7.0"
 actix-web = { version = "4", default-features = false }
-agave-feature-set = { version = "2.3.7", default-features = false }
-agave-geyser-plugin-interface = { version = "2.3.8", default-features = false }
-agave-reserved-account-keys = { version = "2.3.7", default-features = false }
+agave-feature-set = { version = "3.0.0", default-features = false }
+agave-geyser-plugin-interface = { version = "3.0.0", default-features = false }
+agave-reserved-account-keys = { version = "3.0.0", default-features = false }
 anchor-lang-idl = "0.1.2"
 ansi_term = "0.12.1"
 anyhow = { version = "1.0.95", default-features = false }
@@ -39,10 +39,7 @@ bincode = "1.3.3"
 blake3 = { version = "1.8.2", default-features = false }
 borsh = { version = "1.5.5", default-features = false }
 bs58 = { version = "0.5.0", default-features = false }
-chrono = { version = "0.4.42", features = [
-    "alloc",
-    "clock",
-], default-features = false }
+chrono = { version = "0.4.42", features = ["alloc", "clock"], default-features = false }
 clap = { version = "4.5.48", default-features = false }
 clap_complete = { version = "4.5.48", default-features = false }
 convert_case = "0.8.0"
@@ -60,17 +57,13 @@ fern = { version = "0.7.1", default-features = false }
 fork = "0.2.0"
 futures = { version = "0.3.22", default-features = false }
 hex = { version = "0.4.3", default-features = false }
-hiro-system-kit = { version = "0.3.4", default-features = false, features = [
-    "tokio_helpers",
-] }
+hiro-system-kit = { version = "0.3.4", default-features = false, features = ["tokio_helpers"] }
 include_dir = "0.7.4"
 indicatif = { version = "0.18.0", default-features = false }
 ipc-channel = "0.19.0"
 itertools = { version = "0.14.0", default-features = false }
 json5 = "0.4.1"
-jsonrpc-core = { version = "18.0.0", features = [
-    "futures",
-], default-features = false }
+jsonrpc-core = { version = "18.0.0", features = ["futures"], default-features = false }
 jsonrpc-core-client = { version = "18.0.0", default-features = false }
 jsonrpc-derive = "18.0.0"
 jsonrpc-http-server = "18.0.0"
@@ -82,67 +75,61 @@ juniper_codegen = { version = "0.16.0", default-features = false }
 juniper_graphql_ws = { version = "0.4.0", default-features = false }
 lazy_static = "1.5.0"
 libloading = "0.7.4"
-litesvm = { git = "https://github.com/txtx/litesvm.git", branch = "fix/relax-deps", features = [
-    "nodejs-internal",
-] }
+litesvm = { version = "0.8.1", features = ["nodejs-internal"] }
 log = "0.4.27"
 mime_guess = { version = "2.0.4", default-features = false }
 mustache = "0.9.0"
 notify = { version = "8.0.0", default-features = false }
 npm_rs = "1.0.0"
 once_cell = { version = "1.19.0", default-features = false }
-ratatui = { version = "0.29.0", features = [
-    "crossterm",
-], default-features = false }
+ratatui = { version = "0.29.0", features = ["crossterm"], default-features = false }
 reqwest = { version = "0.12.23", default-features = false }
 rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "ff71a526156e6c9409c450f71eccd6aced9bc339", package = "rmcp" }
 rust-embed = "8.2.0"
 serde = { version = "1.0.226", default-features = false }
-serde_derive = { version = "1.0.226", default-features = false } # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
+serde_derive = { version = "1.0.226", default-features = false }                                                                        # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
 serde_json = { version = "1.0.135", default-features = false }
 serde_with = { version = "3.14.0", default-features = false }
-solana-account = { version = "2.2.1", default-features = false }
-solana-account-decoder = { version = "2.3.7", default-features = false }
-solana-account-decoder-client-types = { version = "2.3.7", default-features = false }
-solana-address-lookup-table-interface = { version = "2.2.2", default-features = false }
-solana-client = { version = "2.3.7", default-features = false }
-solana-clock = { version = "2.2.2", default-features = false }
-solana-commitment-config = { version = "2.2.1", default-features = false }
-solana-compute-budget-interface = { version = "2.2.1", default-features = false }
-solana-epoch-info = { version = "2.2.1", default-features = false }
-solana-epoch-schedule = { version = "2.2.1", default-features = false }
-solana-feature-gate-interface = { version = "2.2.1", default-features = false }
-solana-genesis-config = { version = "2.2.1", default-features = false }
-solana-geyser-plugin-manager = { version = "2.3.8", default-features = false }
-solana-hash = { version = "2.3.0", default-features = false }
-solana-inflation = { version = "2.2.1", default-features = false }
-solana-instruction = { version = "2.2.1", default-features = false }
-solana-keypair = { version = "^2.2", default-features = false }
-solana-loader-v3-interface = { version = "5.0.0", default-features = false }
-solana-message = { version = "2.3.0", default-features = false }
-solana-packet = { version = "2.2.1", default-features = false }
-solana-program-option = { version = "2.2.1", default-features = false }
-solana-program-pack = { version = "2.2.1", default-features = false }
-solana-pubkey = { version = "2.3.0", default-features = false }
-solana-rpc-client = { version = "2.3.8", default-features = false }
-solana-rpc-client-api = { version = "2.3.8", default-features = false }
-solana-runtime = { version = "2.3.8", default-features = false }
-solana-sdk-ids = { version = "2.2.1", default-features = false }
-solana-signature = { version = "2.3.0", default-features = false, features = [
-    "rand",
-] }
-solana-signer = { version = "2.2.1", default-features = false }
-solana-slot-hashes = { version = "2.2.1", default-features = false }
-solana-system-interface = { version = "1.0.0", default-features = false }
-solana-sysvar = { version = "2.2.2", default-features = false }
-solana-transaction = { version = "2.2.2", default-features = false }
-solana-transaction-context = { version = "2.3.7", default-features = false }
-solana-transaction-error = { version = "2.2.1", default-features = false }
-solana-transaction-status = { version = "2.3.7", default-features = false }
+solana-account = { version = "3.0.0", default-features = false }
+solana-account-decoder = { version = "3.0.0", default-features = false }
+solana-account-decoder-client-types = { version = "3.0.0", default-features = false }
+solana-address-lookup-table-interface = { version = "3.0.0", default-features = false }
+solana-client = { version = "3.0.0", default-features = false }
+solana-clock = { version = "3.0.0", default-features = false }
+solana-commitment-config = { version = "3.0.0", default-features = false }
+solana-compute-budget-interface = { version = "3.0.0", default-features = false }
+solana-epoch-info = { version = "3.0.0", default-features = false }
+solana-epoch-schedule = { version = "3.0.0", default-features = false }
+solana-feature-gate-interface = { version = "3.0.0", default-features = false }
+solana-genesis-config = { version = "3.0.0", default-features = false }
+solana-geyser-plugin-manager = { version = "3.0.0", default-features = false }
+solana-hash = { version = "3.0.0", default-features = false }
+solana-inflation = { version = "3.0.0", default-features = false }
+solana-instruction = { version = "3.0.0", default-features = false }
+solana-keypair = { version = "3.0.0", default-features = false }
+solana-loader-v3-interface = { version = "6.1.0", default-features = false }
+solana-message = { version = "3.0.0", default-features = false }
+solana-packet = { version = "3.0.0", default-features = false }
+solana-program-option = { version = "3.0.0", default-features = false }
+solana-program-pack = { version = "3.0.0", default-features = false }
+solana-pubkey = { version = "3.0.0", default-features = false }
+solana-rpc-client = { version = "3.0.0", default-features = false }
+solana-rpc-client-api = { version = "3.0.0", default-features = false }
+solana-runtime = { version = "3.0.0", default-features = false }
+solana-sdk-ids = { version = "3.0.0", default-features = false }
+solana-signature = { version = "3.0.0", default-features = false, features = ["rand"] }
+solana-signer = { version = "3.0.0", default-features = false }
+solana-slot-hashes = { version = "3.0.0", default-features = false }
+solana-system-interface = { version = "2.0.0", default-features = false }
+solana-sysvar = { version = "3.0.0", default-features = false }
+solana-transaction = { version = "3.0.0", default-features = false }
+solana-transaction-context = { version = "3.0.0", default-features = false }
+solana-transaction-error = { version = "3.0.0", default-features = false }
+solana-transaction-status = { version = "3.0.0", default-features = false }
 solana-version = { version = "2.3.7", default-features = false }
-spl-associated-token-account = { version = "7.0.0", default-features = false }
-spl-token = { version = "8.0.0", default-features = false }
-spl-token-2022 = { version = "8.0.1", default-features = false }
+spl-associated-token-account-interface = { version = "2.0.0", default-features = false }
+spl-token-2022-interface = { version = "2.0.0", default-features = false }
+spl-token-interface = { version = "2.0.0", default-features = false }
 test-case = "^3.3.1"
 tokio = { version = "1.43.0", default-features = false }
 tokio-tungstenite = { version = "=0.20.1", default-features = false }
@@ -161,8 +148,8 @@ surfpool-subgraph = { path = "crates/subgraph", default-features = false }
 surfpool-types = { path = "crates/types", default-features = false }
 
 txtx-addon-kit = "0.4.10"
-txtx-addon-network-svm = { version = "0.3.10" }
-txtx-addon-network-svm-types = { version = "0.3.9" }
+txtx-addon-network-svm = { version = "0.3.11" }
+txtx-addon-network-svm-types = { version = "0.3.10" }
 txtx-cloud = { version = "0.1.13", features = [
     "clap",
     "toml",
