attempt AWS upload

--- a/.github/workflows/release_cli.yaml
+++ b/.github/workflows/release_cli.yaml
@@ -282,6 +282,55 @@ jobs:
         run: | 
           tar -czvf surfpool-linux-x64.tar.gz surfpool-linux-x64
           tar -czvf surfpool-darwin-arm64.tar.gz surfpool-darwin-arm64
+  
+  aws_release:
+    name: Upload to AWS S3
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/heads/main') && needs.get_release_info.outputs.tag != ''
+    needs:
+      - dist_surfpool
+      - get_release_info
+      # - release
+    permissions:
+      contents: read
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: ./artifacts
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Upload artifacts to S3
+        run: |
+          TAG=${{ needs.get_release_info.outputs.tag }}
+          echo "Uploading artifacts to S3 for release $TAG"
+
+          # Upload all tarballs to S3 under releases/
+          for file in ./artifacts/**/*.tar.gz; do
+            BASENAME=$(basename "$file")
+            echo "→ Uploading $BASENAME ..."
+            aws s3 cp "$file" "s3://txtx-public/releases/$BASENAME" \
+              --acl public-read \
+              --cache-control "public, max-age=31536000"
+          done
+
+      - name: Print public URLs
+        run: |
+          echo "✅ Uploaded artifacts are available at:"
+          for file in ./artifacts/**/*.tar.gz; do
+            BASENAME=$(basename "$file")
+            echo "http://txtx-public.s3.amazonaws.com/releases/$BASENAME"
+          done
 
   
   homebrew:
