--- a/Cargo.toml
+++ b/Cargo.toml
@@ -159,9 +159,9 @@ surfpool-studio-ui = { path = "crates/studio", default-features = false }
 surfpool-subgraph = { path = "crates/subgraph", default-features = false }
 surfpool-types = { path = "crates/types", default-features = false }
 
-txtx-addon-kit = "0.4.11"
-txtx-addon-network-svm = { version = "0.3.15" }
-txtx-addon-network-svm-types = { version = "0.3.14" }
+txtx-addon-kit = "0.4.10"
+txtx-addon-network-svm = { version = "0.3.16" }
+txtx-addon-network-svm-types = { version = "0.3.15" }
 txtx-cloud = { version = "0.1.13", features = [
     "clap",
     "toml",
@@ -170,7 +170,7 @@ txtx-core = { version = "0.4.13" }
 txtx-gql = { version = "0.3.7" }
 txtx-supervisor-ui = { version = "0.2.9", default-features = false }
 
-[patch.crates-io]
+# [patch.crates-io]
 ## Local
 # txtx-addon-kit = { path = "../txtx/crates/txtx-addon-kit" }
 # txtx-core = { path = "../txtx/crates/txtx-core" }
