feat: implement register_scenario RPC method for scenario creation with account overrides

--- a/crates/mcp/Cargo.toml
+++ b/crates/mcp/Cargo.toml
@@ -20,6 +20,7 @@ reqwest = { workspace = true }
 rmcp = { workspace = true, features = ["transport-io", "transport-sse-server", "server", "schemars"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde_yaml = "0.9"
 solana-keypair = { workspace = true }
 solana-pubkey = { workspace = true }
 solana-signer = { workspace = true }
