Update dependencies to use specific branches from the txtx fork of Solana
- Changed dependencies for agave-feature-set, agave-geyser-plugin-interface, agave-reserved-account-keys, solana-account-decoder, solana-account-decoder-client-types, solana-client, solana-geyser-plugin-manager, solana-rpc-client, solana-rpc-client-api, solana-runtime, solana-transaction-context, solana-transaction-status, and solana-version to point to the "txtx/increase-tx-size-v3.0.10" branch in the txtx GitHub repository.
- Updated litesvm and litesvm-token dependencies to use the txtx fork.
- Removed solana-packet dependency and replaced it with solana-perf in the core crate.
- Modified the default features in the cli crate to exclude the supervisor_ui feature.

--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -68,7 +68,7 @@ txtx-gql = { workspace = true }
 txtx-supervisor-ui = { workspace = true, optional = true }
 
 [features]
-default = ["cli", "sqlite", "subgraph"]
+default = ["cli", "sqlite"]
 cli = ["clap/derive", "clap_complete", "toml", "ctrlc", "hiro-system-kit/log"]
 supervisor_ui = ["txtx-supervisor-ui/crates_build"]
 explorer = []
