--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -39,6 +39,7 @@ mime_guess = { workspace = true }
 mustache = { workspace = true }
 notify = { workspace = true, features = ["fsevent-sys"]}
 ratatui = { workspace = true }
+reqwest = { workspace = true, features = ["blocking", "json"] }
 rust-embed = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
