chore: DRY features enum with strum

--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -23,6 +23,7 @@ schemars_derive = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_with = { workspace = true, features = ["alloc", "macros"] }
+strum = { workspace = true }
 solana-account = { workspace = true }
 solana-account-decoder-client-types = { workspace = true }
 solana-clock = { workspace = true }
