--- a/Cargo.toml
+++ b/Cargo.toml
@@ -102,6 +102,7 @@ serde = { version = "1.0.226", default-features = false }
 serde_derive = { version = "1.0.226", default-features = false } # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
 serde_json = { version = "1.0.135", default-features = false }
 serde_with = { version = "3.14.0", default-features = false }
+strum = { version = "0.26", default-features = false, features = ["derive"] }
 solana-account = { version = "3.0.0", default-features = false }
 solana-account-decoder = { version = "3.0.0", default-features = false }
 solana-account-decoder-client-types = { version = "3.0.0", default-features = false }
