fix: correct overrides to pass the tests

--- a/crates/core/src/scenarios/protocols/kamino/v1/overrides.yaml
+++ b/crates/core/src/scenarios/protocols/kamino/v1/overrides.yaml
@@ -15,10 +15,10 @@ templates:
     idl_account_name: Reserve
     properties:
       [
-        liquidity.available_amount,
-        liquidity.borrowed_amount_sf,
-        liquidity.market_price_sf,
-        liquidity.cumulative_borrow_rate_bsf,
+        "liquidity.available_amount",
+        "liquidity.borrowed_amount_sf",
+        "liquidity.market_price_sf",
+        "liquidity.cumulative_borrow_rate_bsf",
       ]
     address:
       type: pubkey
@@ -29,12 +29,12 @@ templates:
     idl_account_name: Reserve
     properties:
       [
-        config.loan_to_value_pct,
-        config.liquidation_threshold_pct,
-        config.min_liquidation_bonus_bps,
-        config.max_liquidation_bonus_bps,
+        "config.loan_to_value_pct",
+        "config.liquidation_threshold_pct",
+        "config.min_liquidation_bonus_bps",
+        "config.max_liquidation_bonus_bps",
       ]
-    addresses:
+    address:
       type: pubkey
 
   - id: kamino-obligation-health
@@ -43,13 +43,13 @@ templates:
     idl_account_name: Obligation
     properties:
       [
-        last_update_slot,
-        lending_market,
-        owner,
-        deposited_value_sf,
-        borrowed_value_sf,
-        allowed_borrow_value_sf,
-        unhealthy_borrow_value_sf,
+        "last_update_slot",
+        "lending_market",
+        "owner",
+        "deposited_value_sf",
+        "borrowed_value_sf",
+        "allowed_borrow_value_sf",
+        "unhealthy_borrow_value_sf",
       ]
     address:
       type: pubkey
