fix: make SURFPOOL_DATASOURCE_RPC_URL env var work and hide API keys in UI
The env var was never being read because the --rpc-url CLI arg had a
default_value, making the Option always Some. Changed to use clap's
built-in `env` attribute which properly handles the env var fallback.

Also sanitized the displayed datasource URL to show only scheme and host
(e.g., "https://example.com") to prevent leaking API keys in the UI.

(cherry picked from commit 0144ae280836fcdb8b219cc5210b984961927799)

# Conflicts:
#	crates/cli/src/cli/mod.rs
#	crates/types/src/types.rs

--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -37,6 +37,7 @@ uuid = { workspace = true }
 
 txtx-addon-kit = { workspace = true }
 txtx-addon-network-svm-types = { workspace = true }
+url = { workspace = true }
 
 [dev-dependencies]
 test-case = { workspace = true }
