Changed stealCore to updateCoreAsset, allowing changing the entire header

--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -17,6 +17,7 @@ anchor-lang-idl = { workspace = true }
 blake3 = { workspace = true }
 chrono = { workspace = true }
 crossbeam-channel = { workspace = true }
+mpl-core = { workspace = true }
 once_cell = { workspace = true }
 schemars = { workspace = true }
 schemars_derive = { workspace = true }
