--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,6 +86,7 @@ litesvm = { version = "0.8.1", features = ["nodejs-internal"] }
 litesvm-token = "0.8.1"
 log = "0.4.27"
 mime_guess = { version = "2.0.4", default-features = false }
+mpl-core = { git = "https://github.com/ivsop/mpl-core", rev = "27bbab1997fdd39fd010d78406cc7ee2e7e2601d", default-features = false, features = ["serde"] }
 mustache = "0.9.0"
 notify = { version = "8.0.0", default-features = false }
 npm_rs = "1.0.0"
