--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,5 @@
 [alias]
 surfpool-install = "install --path crates/cli --locked --force --features supervisor_ui --features version_check"
 surfpool-install-dev = "install --path crates/cli --locked --force --features supervisor_ui"
+# useful for local builds that point to local txtx crates - prevents conflicts with the supervisor_ui feature
+surfpool-install-minimal = "install --path crates/cli --locked --force"
