--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -97,6 +97,11 @@ txtx-addon-network-svm = { workspace = true }
 
 [dev-dependencies]
 test-case = { workspace = true }
+criterion = { version = "0.5", features = ["html_reports"] }
+
+[[bench]]
+name = "transaction_ingestion"
+harness = false
 
 [features]
 ignore_tests_ci = []
