enhance transaction ingestion benchmarks and add transaction pool generation

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -8,6 +8,7 @@ license = { workspace = true }
 repository = { workspace = true }
 keywords = { workspace = true }
 categories = { workspace = true }
+autobenches = false
 
 [lib]
 path = "src/lib.rs"
