refactor benchmark setup and add new `surfpool-bench` crate for performance testing. Remove outdated transaction

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ categories = ["cryptography"]
 
 [workspace]
 members = [
+    "crates/bench",
     "crates/cli",
     "crates/core",
     "crates/db",
