benchmark workflow to run component benchmarks

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -52,13 +52,13 @@ jobs:
           key: ${{ runner.os }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Run benchmarks
-        run: cargo bench --bench transaction_ingestion -p surfpool-bench 2>&1 | tee benchmark.log
+        run: cargo bench --bench transaction_ingestion -p surfpool-bench -- transaction_components 2>&1 | tee benchmark.log
 
       - name: Extract benchmark results
         run: |
           echo "## Benchmark Results" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Transaction Ingestion Performance" >> $GITHUB_STEP_SUMMARY
+          echo "### Transaction Component Performance" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           if grep -q "time:" benchmark.log; then
             echo '```' >> $GITHUB_STEP_SUMMARY
