--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/lib.rs"
 
 [dependencies]
 anchor-lang-idl = { workspace = true }
+base64 = { workspace = true }
 blake3 = { workspace = true }
 chrono = { workspace = true }
 crossbeam-channel = { workspace = true }
