--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -84,9 +84,11 @@ solana-version = { workspace = true }
 spl-associated-token-account-interface = { workspace = true }
 spl-token-interface = { workspace = true }
 spl-token-2022-interface = { workspace = true }
+thiserror = { workspace = true }
 tokio = { workspace = true }
 uuid = { workspace = true }
 
+surfpool-db = { workspace = true }
 surfpool-subgraph = { workspace = true, optional = true }
 surfpool-types = { workspace = true }
 
@@ -101,6 +103,9 @@ test-case = { workspace = true }
 env_logger = "*"
 
 [features]
+default = ["sqlite"]
+sqlite = ["surfpool-db/sqlite"]
+postgres = ["surfpool-db/postgres"]
 ignore_tests_ci = []
 geyser_plugin = ["solana-geyser-plugin-manager"]
 subgraph = ["surfpool-subgraph"]
