--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -102,6 +102,7 @@ txtx-addon-network-svm = { workspace = true }
 [dev-dependencies]
 test-case = { workspace = true }
 env_logger = "*"
+tempfile = { workspace = true }
 
 [features]
 default = ["sqlite"]
