--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -63,6 +63,7 @@ solana-instruction = { workspace = true }
 solana-keypair = { workspace = true }
 solana-loader-v3-interface = { workspace = true }
 solana-message = { workspace = true }
+solana-nonce = { workspace = true }
 solana-packet = { workspace = true }
 solana-program-option = { workspace = true }
 solana-program-pack = { workspace = true }
@@ -97,6 +98,7 @@ txtx-addon-network-svm = { workspace = true }
 
 [dev-dependencies]
 test-case = { workspace = true }
+env_logger = "*"
 
 [features]
 ignore_tests_ci = []
