upgrade `SurfnetSvm` transactions to use Storage rather than HashMap

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -79,6 +79,7 @@ solana-system-interface = { workspace = true }
 solana-sysvar = { workspace = true }
 solana-sysvar-id = { workspace = true }
 solana-transaction = { workspace = true }
+solana-transaction-context = { workspace = true }
 solana-transaction-error = { workspace = true }
 solana-transaction-status = { workspace = true }
 solana-version = { workspace = true }
