--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -20,6 +20,7 @@ base64 = { workspace = true }
 bincode = { workspace = true }
 blake3 = { workspace = true }
 borsh = { workspace = true }
+bytemuck = "1.21"
 bs58 = { workspace = true }
 chrono = { workspace = true }
 convert_case = { workspace = true }
