feat(core): enable persistent surfnets (#458)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -139,6 +139,7 @@ solana-signer = { version = "3.0.0", default-features = false }
 solana-slot-hashes = { version = "3.0.0", default-features = false }
 solana-system-interface = { version = "2.0.0", default-features = false }
 solana-sysvar = { version = "3.0.0", default-features = false }
+solana-sysvar-id = { version = "3.0.0", default-features = false }
 solana-transaction = { version = "3.0.0", default-features = false }
 solana-transaction-context = { version = "3.0.0", default-features = false }
 solana-transaction-error = { version = "3.0.0", default-features = false }
@@ -147,7 +148,9 @@ solana-version = { version = "3.0.0", default-features = false }
 spl-associated-token-account-interface = { version = "2.0.0", default-features = false }
 spl-token-2022-interface = { version = "2.0.0", default-features = false }
 spl-token-interface = { version = "2.0.0", default-features = false }
+tempfile = "3.23.0"
 test-case = "^3.3.1"
+thiserror = "2.0"
 tokio = { version = "1.43.0", default-features = false }
 tokio-tungstenite = { version = "=0.20.1", default-features = false }
 toml = { version = "0.8.23", default-features = false }
