--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -20,6 +20,7 @@ base64 = { workspace = true }
 bincode = { workspace = true }
 blake3 = { workspace = true }
 borsh = { workspace = true }
+bytemuck = "1.21"
 bs58 = { workspace = true }
 chrono = { workspace = true }
 convert_case = { workspace = true }
@@ -77,16 +78,20 @@ solana-signer = { workspace = true }
 solana-slot-hashes = { workspace = true }
 solana-system-interface = { workspace = true }
 solana-sysvar = { workspace = true }
+solana-sysvar-id = { workspace = true }
 solana-transaction = { workspace = true }
+solana-transaction-context = { workspace = true }
 solana-transaction-error = { workspace = true }
 solana-transaction-status = { workspace = true }
 solana-version = { workspace = true }
 spl-associated-token-account-interface = { workspace = true }
 spl-token-interface = { workspace = true }
 spl-token-2022-interface = { workspace = true }
+thiserror = { workspace = true }
 tokio = { workspace = true }
 uuid = { workspace = true }
 
+surfpool-db = { workspace = true }
 surfpool-subgraph = { workspace = true, optional = true }
 surfpool-types = { workspace = true }
 
@@ -99,8 +104,12 @@ txtx-addon-network-svm = { workspace = true }
 [dev-dependencies]
 test-case = { workspace = true }
 env_logger = "*"
+tempfile = { workspace = true }
 
 [features]
+default = ["sqlite"]
+sqlite = ["surfpool-db/sqlite"]
+postgres = ["surfpool-db/postgres"]
 ignore_tests_ci = []
 geyser_plugin = ["solana-geyser-plugin-manager"]
 subgraph = ["surfpool-subgraph"]
